# solutil

./: .gitignore  Cargo.toml
scripts/: alice_to_bob.sh  bob_to_alice.sh  get_alice_history.sh  get_bob_history.sh  mint_to_alice.sh
serializations/: 3LfuWxR36z.json  3PQwXYKJJj.json  3SG4YVTgEg.json  xr3NSvzWbE.json
src/: fungible_history.rs  fungible_token_transfer.rs  history.rs  main.rs  models.rs  sol_history.rs  sol_transfer.rs
