[package]
name = "solutil"
version = "0.1.0"
edition = "2021"

[dependencies]
prettytable = "0.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
solana-client = "1.18.14"
solana-sdk = "1.18.14"
spl-token = "4.0"
solana-transaction-status = "1.18.14"

